Remove code outputs, fill-in built-in datasets section

--- a/fuel_tutorial.ipynb
+++ b/fuel_tutorial.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -84,21 +95,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sources are ('features', 'targets').\n",
-      "Axis labels are {'features': ('batch', 'height', 'width'), 'targets': ('batch', 'index')}.\n",
-      "Dataset contains 8 examples.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Sources are {}.'.format(dataset.sources))\n",
     "print('Axis labels are {}.'.format(dataset.axis_labels))\n",
@@ -114,19 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "imap\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "state = dataset.open()\n",
     "print(state.__class__.__name__)"
@@ -141,20 +134,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(array([[ 47, 211],\n",
-      "       [ 38,  53]]), array([0]))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(dataset.get_data(state=state))"
    ]
@@ -170,21 +154,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration over\n",
-      "(array([[ 47, 211],\n",
-      "       [ 38,  53]]), array([0]))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "while True:\n",
@@ -213,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -236,25 +210,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "State is None\n",
-      "(array([[[ 47, 211],\n",
-      "        [ 38,  53]],\n",
-      "\n",
-      "       [[204, 116],\n",
-      "        [152, 249]]]), array([[0],\n",
-      "       [3]]))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "state = dataset.open()\n",
     "print('State is {}'.format(state))\n",
@@ -277,22 +237,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0, 1, 2, 3], [4, 5, 6, 7]]\n",
-      "[[7, 2, 1, 6], [0, 4, 3, 5]]\n",
-      "[0, 1, 2, 3, 4, 5, 6, 7]\n",
-      "[7, 2, 1, 6, 0, 4, 3, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from fuel.schemes import (SequentialScheme, ShuffledScheme,\n",
     "                          SequentialExampleScheme, ShuffledExampleScheme)\n",
@@ -314,20 +263,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(4, 2, 2) (4, 1)\n",
-      "(4, 2, 2) (4, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "state = dataset.open()\n",
     "scheme = ShuffledScheme(examples=dataset.num_examples, batch_size=4)\n",
@@ -350,20 +290,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(4, 2, 2) (4, 1)\n",
-      "(4, 2, 2) (4, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from fuel.streams import DataStream\n",
     "\n",
@@ -385,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -410,46 +341,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(array([[[ 0.18530572, -1.54479571],\n",
-      "        [ 0.42249705,  0.24111545]],\n",
-      "\n",
-      "       [[-1.30760439,  0.98059429],\n",
-      "        [-1.43317627, -1.2238898 ]],\n",
-      "\n",
-      "       [[ 1.46892937,  1.58054882],\n",
-      "        [ 0.47830677, -1.2657471 ]],\n",
-      "\n",
-      "       [[ 0.63178351, -0.28907693],\n",
-      "        [-0.40069638,  1.10616617]]]), array([[1],\n",
-      "       [0],\n",
-      "       [3],\n",
-      "       [2]]))\n",
-      "(array([[[ 1.32940506, -0.2332672 ],\n",
-      "        [-1.60060544, -0.31698179]],\n",
-      "\n",
-      "       [[ 0.03182898,  0.50621164],\n",
-      "        [-1.64246273,  1.28754777]],\n",
-      "\n",
-      "       [[ 0.88292727, -0.34488665],\n",
-      "        [ 0.15740086,  1.51078666]],\n",
-      "\n",
-      "       [[-1.00065091, -0.84717417],\n",
-      "        [ 0.84106998, -0.19140991]]]), array([[2],\n",
-      "       [0],\n",
-      "       [3],\n",
-      "       [2]]))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for batch in standardized_stream.get_epoch_iterator():\n",
     "    print(batch)"
@@ -464,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -484,46 +380,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(array([[[ 0.63178349, -0.28907692],\n",
-      "        [-0.40069637,  1.10616612]],\n",
-      "\n",
-      "       [[-1.00065088, -0.84717417],\n",
-      "        [ 0.84107   , -0.19140992]],\n",
-      "\n",
-      "       [[ 0.8829273 , -0.34488666],\n",
-      "        [ 0.15740086,  1.51078665]],\n",
-      "\n",
-      "       [[-1.30760443,  0.98059428],\n",
-      "        [-1.43317628, -1.22388983]]], dtype=float32), array([[2],\n",
-      "       [2],\n",
-      "       [3],\n",
-      "       [0]]))\n",
-      "(array([[[ 0.03182898,  0.50621164],\n",
-      "        [-1.64246273,  1.28754783]],\n",
-      "\n",
-      "       [[ 1.46892941,  1.58054876],\n",
-      "        [ 0.47830677, -1.26574707]],\n",
-      "\n",
-      "       [[ 0.18530573, -1.54479575],\n",
-      "        [ 0.42249706,  0.24111545]],\n",
-      "\n",
-      "       [[ 1.32940507, -0.2332672 ],\n",
-      "        [-1.60060549, -0.31698179]]], dtype=float32), array([[0],\n",
-      "       [3],\n",
-      "       [1],\n",
-      "       [2]]))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_stream = Cast(\n",
     "    ScaleAndShift(\n",
@@ -560,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -590,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -617,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -644,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -664,22 +525,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sources are ('image_features', 'targets', 'vector_features').\n",
-      "Axis labels are {'vector_features': ('batch', 'feature'), 'image_features': ('batch', 'channel', 'height', 'width'), 'targets': ('batch', 'index')}.\n",
-      "Training set contains 90 examples.\n",
-      "Test set contains 10 examples.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Sources are {}.'.format(train_dataset.sources))\n",
     "print('Axis labels are {}.'.format(train_dataset.axis_labels))\n",
@@ -696,27 +546,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(10, 3, 32, 32), (10, 1), (10, 16)]\n",
-      "[(10, 3, 32, 32), (10, 1), (10, 16)]\n",
-      "[(10, 3, 32, 32), (10, 1), (10, 16)]\n",
-      "[(10, 3, 32, 32), (10, 1), (10, 16)]\n",
-      "[(10, 3, 32, 32), (10, 1), (10, 16)]\n",
-      "[(10, 3, 32, 32), (10, 1), (10, 16)]\n",
-      "[(10, 3, 32, 32), (10, 1), (10, 16)]\n",
-      "[(10, 3, 32, 32), (10, 1), (10, 16)]\n",
-      "[(10, 3, 32, 32), (10, 1), (10, 16)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_stream = DataStream(\n",
     "    dataset=train_dataset,\n",
@@ -724,6 +558,17 @@
     "        examples=train_dataset.num_examples, batch_size=10))\n",
     "for batch in train_stream.get_epoch_iterator():\n",
     "    print([source.shape for source in batch])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### H5PYDataset for small datasets\n",
+    "\n",
+    "The `H5PYDataset` class isn't suitable only to large datasets. In fact, most of Fuel's built-in datasets rely on  HDF5 for storage.\n",
+    "\n",
+    "At first sight, this might seem inefficient, but `H5PYDataset` features a `load_in_memory` constructor argument which, when set to `True`, reads data off disk once and stores it in memory as a numpy array."
    ]
   },
   {
@@ -752,7 +597,22 @@
    "source": [
     "You can override it by setting the `FUEL_DATA_PATH` environment variable.\n",
     "\n",
-    "In both cases, Fuel expects a sequence of paths separated by an OS-specific delimiter (`:` for Linux / Mac OS, `;` for Windows)."
+    "In both cases, Fuel expects a sequence of paths separated by an OS-specific delimiter (`:` for Linux / Mac OS, `;` for Windows).\n",
+    "\n",
+    "Let's create a directory in which to put our data files and set it as our Fuel data path."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!mkdir fuel_data\n",
+    "import os\n",
+    "os.environ['FUEL_DATA_PATH'] = os.path.abspath('./fuel_data')"
    ]
   },
   {
@@ -761,12 +621,72 @@
    "source": [
     "### Downloading raw data files\n",
     "\n",
+    "Fuel comes with a `fuel-download` script which automates downloading raw data files for built-in datasets. You can have a look at the full list of built-in datasets with `fuel-download -h`. For now, we'll download the MNIST dataset in our newly-created data directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!fuel-download mnist -d $FUEL_DATA_PATH"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Converting raw data files\n",
     "\n",
+    "We'll now convert the raw data files to an HDF5 file which the `MNIST` dataset class can read. This is done using the `fuel-convert` script."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!fuel-convert mnist -d $FUEL_DATA_PATH -o $FUEL_DATA_PATH"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Using built-in datasets\n",
     "\n",
-    "## Parallelizing data processing\n",
+    "Now that the data has been downloaded and converted, we can instantiate and use the built-in dataset class just like any other `H5PYDataset` instance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from fuel.datasets import MNIST\n",
+    "from matplotlib import pyplot, cm\n",
     "\n",
+    "dataset = MNIST(('train',), sources=('features',))\n",
+    "state = dataset.open()\n",
+    "image, = dataset.get_data(state=state, request=[1234])\n",
+    "pyplot.imshow(image.reshape((28, 28)), cmap=cm.Greys_r, interpolation='nearest')\n",
+    "pyplot.show()\n",
+    "dataset.close(state)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Extending Fuel\n",
     "\n",
     "### New dataset classes\n",
@@ -774,6 +694,8 @@
     "### New transformers\n",
     "\n",
     "### New iteration schemes\n",
+    "\n",
+    "## Parallelizing data processing\n",
     "\n",
     "## Common tasks\n",
     "\n",
