Populate 'Extending Fuel' section in part

--- a/fuel_tutorial.ipynb
+++ b/fuel_tutorial.ipynb
@@ -480,7 +480,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -691,10 +691,157 @@
     "\n",
     "### New dataset classes\n",
     "\n",
+    "New dataset classes are implemented by subclassing `Dataset` and implementing a `get_data` method. If your dataset interacts with stateful objects (e.g. files on disk), then you should also override the `open` and `close` methods.\n",
+    "\n",
+    "If your data fits in memory, you can save yourself some time by inheriting from `IndexableDataset`. In that case, all you need to do is load the data as a `dict` mapping source names to their corresponding data and pass it to the superclass as the `indexables` argument.\n",
+    "\n",
+    "For instance, here's how you would implement a specialized class to interface with `.npy` files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from six import iteritems\n",
+    "\n",
+    "\n",
+    "class NPYDataset(IndexableDataset):\n",
+    "    def __init__(self, source_paths, **kwargs):\n",
+    "        indexables = dict(\n",
+    "            [(source, numpy.load(path)) for\n",
+    "             source, path in iteritems(source_paths)])\n",
+    "        super(NPYDataset, self).__init__(indexables, **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's this class in action:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "numpy.save('fuel_data/npy_dataset_features.npy',\n",
+    "           numpy.arange(40).reshape((10, 4)))\n",
+    "numpy.save('fuel_data/npy_dataset_targets.npy',\n",
+    "           numpy.arange(10).reshape((10, 1)))\n",
+    "dataset = NPYDataset({'features': 'fuel_data/npy_dataset_features.npy',\n",
+    "                      'targets': 'fuel_data/npy_dataset_targets.npy'})\n",
+    "state = dataset.open()\n",
+    "print(dataset.get_data(state=state, request=[0, 1, 2, 3]))\n",
+    "dataset.close(state)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### New transformers\n",
     "\n",
+    "An important thing to know about data streams is that they distinguish between two types of outputs: single examples, and batches of examples. Depending on your choice of iteration scheme, a data stream's `produces_examples` property will either be `True` (it produces examples) or `False` (it produces batches).\n",
+    "\n",
+    "Transformers are aware of this, and as such implement two distinct methods: `transform_example` and `transform_batch`. A new transformer is typically implemented by subclassing `Transformer` and implementing one or both of these methods.\n",
+    "\n",
+    "As an example, here's "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from fuel.transformers import Transformer\n",
+    "\n",
+    "\n",
+    "class RandomPatchExtractor(Transformer):\n",
+    "    def __init__(self, data_stream, patch_size, spatial_axes, **kwargs):\n",
+    "        self.patch_size = patch_size\n",
+    "        self.spatial_axes = spatial_axes\n",
+    "        super(RandomPatchExtractor, self).__init__(\n",
+    "            data_stream, data_stream.produces_examples, **kwargs)\n",
+    "        \n",
+    "    def transform_example(self, example):\n",
+    "        image_shape\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### New iteration schemes\n",
     "\n",
+    "New iteration schemes are implemented by subclassing `IterationScheme` and implementing a `get_request_iterator` method, which should return an iterator that returns lists of indices.\n",
+    "\n",
+    "Two subclasses of `IterationScheme` typically serve as a basis for other iteration schemes: `IndexScheme` (for schemes requesting examples) and `BatchScheme` (for schemes requesting batches). Both subclasses are instantiated by providing a list of indices or a number of examples, and `BatchScheme` accepts an additional `batch_size` argument.\n",
+    "\n",
+    "Here's how you would implement an iteration scheme that iterates over even examples:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from fuel.schemes import IndexScheme, BatchScheme\n",
+    "# `iter_` : A picklable version of `iter`\n",
+    "from picklable_itertools import iter_, imap\n",
+    "# Partition all elements of a sequence into tuples of length at most n\n",
+    "from picklable_itertools.extras import partition_all\n",
+    "\n",
+    "\n",
+    "class ExampleEvenScheme(IndexScheme):\n",
+    "    def get_request_iterator(self):\n",
+    "        indices = list(self.indices)[::2]\n",
+    "        return iter_(indices)\n",
+    "\n",
+    "\n",
+    "class BatchEvenScheme(BatchScheme):\n",
+    "    def get_request_iterator(self):\n",
+    "        indices = list(self.indices)[::2]\n",
+    "        return imap(list, partition_all(self.batch_size, indices))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here are the two iteration scheme classes in action:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(list(ExampleEvenScheme(10).get_request_iterator()))\n",
+    "print(list(BatchEvenScheme(10, 2).get_request_iterator()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Parallelizing data processing\n",
     "\n",
     "## Common tasks\n",
