Fill in the rest of the transformer tutorial section

--- a/fuel_tutorial.ipynb
+++ b/fuel_tutorial.ipynb
@@ -753,7 +753,7 @@
     "\n",
     "Transformers are aware of this, and as such implement two distinct methods: `transform_example` and `transform_batch`. A new transformer is typically implemented by subclassing `Transformer` and implementing one or both of these methods.\n",
     "\n",
-    "As an example, here's "
+    "As an example, here's how you would double the value of the `'features'` data source."
    ]
   },
   {
@@ -767,16 +767,192 @@
     "from fuel.transformers import Transformer\n",
     "\n",
     "\n",
-    "class RandomPatchExtractor(Transformer):\n",
-    "    def __init__(self, data_stream, patch_size, spatial_axes, **kwargs):\n",
-    "        self.patch_size = patch_size\n",
-    "        self.spatial_axes = spatial_axes\n",
-    "        super(RandomPatchExtractor, self).__init__(\n",
-    "            data_stream, data_stream.produces_examples, **kwargs)\n",
+    "class FeaturesDoubler(Transformer):\n",
+    "    def __init__(self, data_stream, **kwargs):\n",
+    "        super(FeaturesDoubler, self).__init__(\n",
+    "            data_stream=data_stream,\n",
+    "            produces_examples=data_stream.produces_examples,\n",
+    "            **kwargs)\n",
     "        \n",
     "    def transform_example(self, example):\n",
-    "        image_shape\n",
-    "        "
+    "        if 'features' in self.sources:\n",
+    "            example = list(example)\n",
+    "            index = self.sources.index('features')\n",
+    "            example[index] *= 2\n",
+    "            example = tuple(example)\n",
+    "        return example\n",
+    "    \n",
+    "    def transform_batch(self, batch):\n",
+    "        if 'features' in self.sources:\n",
+    "            batch = list(batch)\n",
+    "            index = self.sources.index('features')\n",
+    "            batch[index] *= 2\n",
+    "            batch = tuple(batch)\n",
+    "        return batch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Most transformers you'll implement will call their superclass constructor by passing the data stream and declaring whether they produce examples or batches. Since we wish to support both batches and examples, we'll declare our output type to be the same as our data stream's output type.\n",
+    "\n",
+    "If you were to build a transformer that only works on batches, you would pass `produces_examples=False` and implement only `transform_batch`. If anyone tried to use your transformer on an example data stream, an error would automatically be raised.\n",
+    "\n",
+    "Let's test our doubler on some dummy dataset. **Note that the this implementation is brittle and only works on numpy arrays.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dataset = IndexableDataset(\n",
+    "    indexables={'features': numpy.array([1, 2, 3, 4]),\n",
+    "                'targets': numpy.array([-1, 1, -1, 1])})\n",
+    "example_scheme = SequentialExampleScheme(examples=dataset.num_examples)\n",
+    "example_stream = FeaturesDoubler(\n",
+    "    data_stream=DataStream(\n",
+    "        dataset=dataset, iteration_scheme=example_scheme))\n",
+    "batch_scheme = SequentialScheme(\n",
+    "    examples=dataset.num_examples, batch_size=2)\n",
+    "batch_stream = FeaturesDoubler(\n",
+    "    data_stream=DataStream(\n",
+    "        dataset=dataset, iteration_scheme=batch_scheme))\n",
+    "print([example for example in example_stream.get_epoch_iterator()])\n",
+    "print([batch for batch in batch_stream.get_epoch_iterator()])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you think the `transform_example` and `transform_batch` implementations are repetitive, you're right! In cases where the example and batch implementations of a transformer are the same, you can subclass from `AgnosticTransformer` instead. It requires that you implement a `transform_any` method, which will be called by both `transform_example` and `transform_batch`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from fuel.transformers import AgnosticTransformer\n",
+    "\n",
+    "class FeaturesDoubler(AgnosticTransformer):\n",
+    "    def __init__(self, data_stream, **kwargs):\n",
+    "        super(FeaturesDoubler, self).__init__(\n",
+    "            data_stream=data_stream,\n",
+    "            produces_examples=data_stream.produces_examples,\n",
+    "            **kwargs)\n",
+    "\n",
+    "    def transform_any(self, data):\n",
+    "        if 'features' in self.sources:\n",
+    "            data = list(data)\n",
+    "            index = self.sources.index('features')\n",
+    "            data[index] *= 2\n",
+    "            data = tuple(data)\n",
+    "        return data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our transformer could be more general: what if we want to double `'features'` *and* `'targets'`, or only `'targets'`? \n",
+    "\n",
+    "Transformers which are applied sourcewise like our doubler should usually subclass from `SourcewiseTransformer`. Their constructor takes an additional `which_sources` keyword argument specifying which sources to apply the transformer to. It's expected to be a tuple of source names. If `which_sources` is `None`, then the transformer is applied to *all* sources. Subclasses of `SourcewiseTransformer` should implement a `transform_source_example` method and/or a `transform_source_batch` method, which apply on an individual source.\n",
+    "\n",
+    "There also exists an `AgnosticSourcewiseTransformer` class for cases where the example and batch implementations of a sourcewise transformer are the same. This class requires a `transform_any_source` method to be implemented."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from fuel.transformers import AgnosticSourcewiseTransformer\n",
+    "\n",
+    "class Doubler(AgnosticSourcewiseTransformer):\n",
+    "    def __init__(self, data_stream, **kwargs):\n",
+    "        super(Doubler, self).__init__(\n",
+    "            data_stream=data_stream,\n",
+    "            produces_examples=data_stream.produces_examples,\n",
+    "            **kwargs)\n",
+    "\n",
+    "    def transform_any_source(self, source):\n",
+    "        return 2 * source"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try this implementation on our dummy dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "target_stream = Doubler(\n",
+    "    data_stream=DataStream(\n",
+    "        dataset=dataset,\n",
+    "        iteration_scheme=batch_scheme),\n",
+    "    which_sources=('targets',))\n",
+    "\n",
+    "all_stream = Doubler(\n",
+    "    data_stream=DataStream(\n",
+    "        dataset=dataset,\n",
+    "        iteration_scheme=batch_scheme),\n",
+    "    which_sources=None)\n",
+    "\n",
+    "print([batch for batch in target_stream.get_epoch_iterator()])\n",
+    "print([batch for batch in all_stream.get_epoch_iterator()])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, there exists a `Mapping` transformer which acts as a swiss-army knife transformer. In addition to a data stream, its constructor accepts a function which will be applied to data coming from the stream.\n",
+    "\n",
+    "Here's how you would implement the feature doubler using `Mapping`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from fuel.transformers import Mapping\n",
+    "\n",
+    "features_index = dataset.sources.index('features')\n",
+    "def double(data):\n",
+    "    data = list(data)\n",
+    "    data[features_index] *= 2\n",
+    "    return tuple(data)\n",
+    "\n",
+    "mapping_stream = Mapping(\n",
+    "    data_stream=DataStream(\n",
+    "        dataset=dataset, iteration_scheme=batch_scheme),\n",
+    "    mapping=double)\n",
+    "\n",
+    "print([batch for batch in mapping_stream.get_epoch_iterator()])"
    ]
   },
   {
