Add remark about 'sources' constructor argument

--- a/fuel_tutorial.ipynb
+++ b/fuel_tutorial.ipynb
@@ -687,6 +687,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Restricting sources\n",
+    "\n",
+    "This feature is not unique to built-in datasets (it applies to all datasets), but now is a good time to explain it: Fuel allows you to restrict which sources are iterated over through a `sources` constructor argument. This is what was going on in the last block of code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Extending Fuel\n",
     "\n",
     "### New dataset classes\n",
