Add default transformer section

--- a/fuel_tutorial.ipynb
+++ b/fuel_tutorial.ipynb
@@ -696,6 +696,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Default transformers\n",
+    "\n",
+    "Another dataset feature we'll be covering is the use of default transformers. Through their `default_transformers` attribute, datasets can describe a transformer pipeline which maps their data into a nicer format.\n",
+    "\n",
+    "This is the case for MNIST. For storage efficiency reasons, images are stored in `uint8` format and pixel values range from 0 to 255. However, people typically think of MNIST features as floating point numbers going from 0.0 to 1.0.\n",
+    "\n",
+    "Manually implementing a transformer pipeline everytime you want to use MNIST is tedious, so MNIST defines a default transformer pipeline that divides features by 255.0 and casts them as `floatX`.\n",
+    "\n",
+    "You can have this pipeline automatically plugged into your data stream by using the `DataStream.default_stream` alternative constructor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "vanilla_stream = DataStream(\n",
+    "    dataset=dataset,\n",
+    "    iteration_scheme=SequentialExampleScheme(dataset.num_examples))\n",
+    "print(next(vanilla_stream.get_epoch_iterator())[0].max())\n",
+    "\n",
+    "default_stream = DataStream.default_stream(\n",
+    "    dataset=dataset,\n",
+    "    iteration_scheme=SequentialExampleScheme(dataset.num_examples))\n",
+    "print(next(default_stream.get_epoch_iterator())[0].max())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Extending Fuel\n",
     "\n",
     "### New dataset classes\n",
