Add basic processing server section

--- a/fuel_tutorial.ipynb
+++ b/fuel_tutorial.ipynb
@@ -1063,9 +1063,90 @@
    "source": [
     "## Parallelizing data processing\n",
     "\n",
-    "## Common tasks\n",
+    "Fuel allows to parallelize data processing in a separate process. This feature is still under development, but it is already pretty useful.\n",
     "\n",
-    "### Preprocess once"
+    "Implementing a parallelized preprocessing pipeline is done in two steps. At first, you should write a Python script that sets up the data processing pipeline and spawns a server that listens to requests. See the `fuel_server` notebook for more details on that.\n",
+    "\n",
+    "Once the server is up and running, you'll need to instantiate a `ServerDataStream` instance, which will connect to the server and make requests."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import argparse\n",
+    "import time\n",
+    "\n",
+    "from fuel.streams import DataStream, ServerDataStream\n",
+    "from fuel.transformers import Transformer\n",
+    "\n",
+    "\n",
+    "class Bottleneck(Transformer):\n",
+    "    def __init__(self, data_stream, **kwargs):\n",
+    "        self.slowdown = kwargs.pop('slowdown', 0)\n",
+    "        super(Bottleneck, self).__init__(\n",
+    "            data_stream, data_stream.produces_examples, **kwargs)\n",
+    "\n",
+    "    def get_data(self, request=None):\n",
+    "        if request is not None:\n",
+    "            raise ValueError\n",
+    "        time.sleep(self.slowdown)\n",
+    "        return next(self.child_epoch_iterator)\n",
+    "\n",
+    "\n",
+    "dataset = IndexableDataset({'features': [[0] * 128] * 1000})\n",
+    "iteration_scheme = ShuffledScheme(examples=1000, batch_size=100)\n",
+    "regular_data_stream = Bottleneck(\n",
+    "    data_stream=DataStream(\n",
+    "        dataset=dataset, iteration_scheme=iteration_scheme),\n",
+    "    slowdown=0.005)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def time_iteration(parallel):\n",
+    "    if parallel:\n",
+    "        data_stream = ServerDataStream(('features',), produces_examples=False)\n",
+    "    else:\n",
+    "        data_stream = regular_data_stream\n",
+    "\n",
+    "    start_time = time.time()\n",
+    "    for i in range(10):\n",
+    "        for data in data_stream.get_epoch_iterator(): time.sleep(0.01)\n",
+    "    stop_time = time.time()\n",
+    "    print('Training took {} seconds'.format(stop_time - start_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "time_iteration(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "time_iteration(True)"
    ]
   }
  ],
